Fix wallet-rounded-checked alignment

--- a/src/scss/components/list-variant-bank.scss
+++ b/src/scss/components/list-variant-bank.scss
@@ -13,7 +13,7 @@
             height: 20px;
             border-radius: 50px;
             border: 2px solid $p2;
-            margin-right: 3px;
+            margin-right: 5px;
             margin-left: 12px;
             .icon {
                 opacity: 0;
